2011-02-14  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: 304 Not Modified responses have a yellow icon in Web Inspector Resources panel
        https://bugs.webkit.org/show_bug.cgi?id=33220

        * inspector/front-end/ResourceHeadersView.js:
        (WebInspector.ResourceHeadersView.prototype._refreshHTTPInformation):

2011-02-14  Adrienne Walker  <enne@google.com>

        Reviewed by James Robinson.

        [chromium] Modify LayerTilerChromium to use TilingData.
        https://bugs.webkit.org/show_bug.cgi?id=54143

        Most of the previous data in LayerTilerChromium is now calculated
        from TilingData.  TilingData was modified to allow for a dynamic
        tile size and page size.  LayerTilerChromium also gets its own
        shader with a texture transform to handle drawing from a texture
        that is larger than a tile.

        * platform/graphics/chromium/LayerChromium.h:
        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::LayerRendererChromium):
        (WebCore::LayerRendererChromium::updateAndDrawRootLayer):
        (WebCore::LayerRendererChromium::initializeSharedObjects):
        (WebCore::LayerRendererChromium::cleanupSharedObjects):
        * platform/graphics/chromium/LayerRendererChromium.h:
        (WebCore::LayerRendererChromium::tilerSharedValues):
        * platform/graphics/chromium/LayerTilerChromium.cpp:
        (WebCore::LayerTilerChromium::create):
        (WebCore::LayerTilerChromium::LayerTilerChromium):
        (WebCore::LayerTilerChromium::setTileSize):
        (WebCore::LayerTilerChromium::reset):
        (WebCore::LayerTilerChromium::contentRectToTileIndices):
        (WebCore::LayerTilerChromium::tileIndex):
        (WebCore::LayerTilerChromium::tileContentRect):
        (WebCore::LayerTilerChromium::tileLayerRect):
        (WebCore::LayerTilerChromium::layerSize):