@@ -1,3 +1,15 @@
+2011-02-14  Alexis Menard  <alexis.menard@nokia.com>
+
+        Reviewed by Andreas Kling.
+
+        [Qt] Crash on application exit after constructing and destroying a QWebView twice
+        https://bugs.webkit.org/show_bug.cgi?id=54000
+
+        Check the value is valid before use it.
+
+        * platform/qt/SharedTimerQt.cpp:
+        (WebCore::SharedTimerQt::~SharedTimerQt):
+
 2011-02-14  Alexander Pavlov  <apavlov@chromium.org>
 
         Reviewed by Yury Semikhatsky.
